Package Scripts updated

--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "start": "node dist/server.js",
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
-    "orm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+
+    "orm": "ts-node-dev  -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "orm:create": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:create -n ",
+    "orm:run": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run",
+    "orm:revert": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:revert",
+    "orm:show": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:show",
+    
     "test": "jest --passWithNoTests --silent --noStackTrace --setupFiles dotenv/config",
     "test:c": "jest --clearCache",
     "test:v": "jest --passWithNoTests"
